--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 
-This project is about using Python to grt stock data from twitter and draw picture of it.
+This project is about using Python to get stock data from twitter and draw picture of it.
